# place-downloader

./: .gitignore  test.js
place_downloader/: .env  Cargo.toml  reddit_response.html
place_downloader/src/: main.rs
place_downloader/src/managers/: config_manager.rs  mod.rs  reddit_manager.rs
place_downloader/src/menus/: account_menu.rs  download_menu.rs  main_menu.rs  mod.rs
place_downloader/src/models/: account_token_model.rs  config_model.rs  mod.rs  token_model.rs
