[package]
name = "place_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
dirs = "5.0.1"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
reqwest = { version = "0.11", features = ["cookies"] }
scraper = "0.17.1"
serde = "1.0.176"
serde_derive = "1.0.176"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
